--- a/src/html/pages/reseller/settings.html
+++ b/src/html/pages/reseller/settings.html
@@ -9,13 +9,13 @@
         <span>Foo Inc.</span>
     </div>
     <div class="col-lg-2 pull-right">
-        <a class="btn btn-default" href="#" role="button"><i class="fa fa-times"></i> Delete Company</a>
+        <a class="btn btn-danger" href="#" role="button"><i class="fa fa-times"></i> Delete Company</a>
     </div>
 </div>
 <div class='row wrapper backs-nav'>
     <div class='col-lg-6 col-lg-offset-3 comp-nav'>
         <div class="comp-nav-item">
-            <a href="#" title="" class="">
+            <a href="#">
                 <i class="fa fa-info"></i>
                 <span>Information</span>
             </a>
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="comp-nav-item">
-            <a href="#" title="" class="">
+            <a href="#">
                 <i class="fa fa-keyboard-o"></i>
                 <span>Domains</span>
             </a>
@@ -41,7 +41,7 @@
         <div class="comp-s-item border-bottom clearfix">
             <div class='col-lg-4'>
                 <h4>Company Information</h4>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac magna ipsum. Fusce consectetur massa ac leo ultricies, a venenatis ipsum volutpat. Nulla at arcu eu eros pharetra euismod eget et urna.</small>
+                <small>You have a list with all data of the company. A full and practice overview.</small>
             </div>
             <div class="col-lg-8 summary">
                 <div class="summary-group clearfix">
@@ -154,7 +154,7 @@
 
                 <div class="summary-group clearfix">
                     <div class="summary-label col-sm-3">
-                        <span>Alternate phone</span>
+                        <span>Alternative phone</span>
                     </div>
                     <div class="col-sm-7">
                         <span>Loremipsum</span>     
@@ -183,13 +183,13 @@
         <div class="comp-s-item border-bottom clearfix">
             <div class='col-lg-4'>
                 <h4>Manage Theme</h4>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
+                <small>You can manage the themes of your system here. You have a list with all themes you have available, and choose the one your prefer with just one click. <a href="../docs/documentation.html">Learn more about it</a></small>
             </div>
 
             <div class="col-lg-8 summary">
                 <div class="clearfix">
                     <div class="col-sm-3">
-                        <span>Tema atual:</span>
+                        <span>Current Theme:</span>
                     </div>
                     <div class="col-sm-7">
                         <span>Blue</span>
@@ -197,7 +197,7 @@
                 </div>
                 <hr>
                 <div class="form-group">
-                    <label for="inputPassword" class="col-sm-3 control-label">Novo tema:</label>
+                    <label class="col-sm-3 control-label">New Theme:</label>
                     <div class="col-sm-4">
                         <select class="form-control">
                             <option>Blue</option>
@@ -213,7 +213,7 @@
         <div class="comp-s-item border-bottom clearfix">
             <div class='col-lg-4'>
                 <h4>Domains</h4>
-                <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                <small>Click in new domain to choose a new domain for the company. <a href="../docs/documentation.html">Learn more about it</a></small>
             </div>
 
             <div class="col-lg-8">
