--- a/src/html/pages/shop/plans-customize.html
+++ b/src/html/pages/shop/plans-customize.html
@@ -3,16 +3,15 @@
 
 <section class="page_title page_title_mini">
     <div class="container clearfix">
-        <h2>Servidores Dedicados</h2>
-        <span>As melhores soluções de Cloud do mercado.</span>
+        <h2>Dedicated Servers</h2>
         <ol class="breadcrumb">
             <li>
-                <a>Página Inicial</a>
+                <a>Home</a>
             </li>
             <li>
-                <a>Produtos e Serviços</a>
+                <a href="plans.html">Products and Services</a>
             </li>
-            <li class="active">Servidores Dedicados</li>
+            <li class="active">Dedicated Servers</li>
         </ol>
     </div>
 </section>
@@ -22,23 +21,23 @@
             <ul class="menu_steps clearfix">
                 <li class="active">
                     <a class="step_icon fa fa-database" href="#"></a>
-                    <h5>Configurar Produto</h5>
+                    <h5>Configure Product</h5>
                 </li>
                 <li>
                     <a class="step_icon fa fa-shopping-cart" href="#"></a>
-                    <h5>Revisar Compra</h5>
+                    <h5>Review Purchase</h5>
                 </li>
                 <li>
                     <a class="step_icon fa fa-user" href="#"></a>
-                    <h5>Identificação</h5>
+                    <h5>Identification</h5>
                 </li>
                 <li>
                     <a class="step_icon fa fa-money" href="#"></a>
-                    <h5>Efetuar Pagamento</h5>
+                    <h5>Payment</h5>
                 </li>
                 <li>
                     <a class="step_icon fa fa-check" href="#"></a>
-                    <h5>Produto Liberado</h5>
+                    <h5>Product Released</h5>
                 </li>
             </ul>
         </div>
@@ -47,7 +46,7 @@
                 <div class="col-md-9">
                     <!-- New VM -->
                     <div class="row">
-                        <h3>Nova Máquina Virtual</h3>
+                        <h3>New Virtual Machine</h3>
                         <div class="col-md-6">
                             <label>Hostname</label>
                             <div class="form-group">
@@ -55,7 +54,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>Domínio</label>
+                            <label>Domain</label>
                             <div class="form-group">
                                 <input class="form-control" type="text">
                             </div>
@@ -64,17 +63,17 @@
                     <hr>
                     <!-- System Config -->
                     <div class="row">
-                        <h3>Configuração do Sistema</h3>
+                        <h3>System Setup</h3>
                         <div class="col-md-4">
-                            <label>Localização de Datacenter</label>
+                            <label>Datacenter Localization</label>
                             <select class="form-control">
-                                <option value="">Escolha um Datacenter</option>
+                                <option value="">Choose a Datacenter</option>
                             </select>
                         </div>
                         <div class="col-md-4">
                             <label>Processor</label>
                             <select class="form-control">
-                                <option value="">Escolha uma CPU</option>
+                                <option value="">Choose a CPU</option>
                             </select>
                         </div>
                     </div>
@@ -82,7 +81,7 @@
                     <!-- RAM -->
                     <div class="row">
                         <div class="col-md-12">
-                            <label>Memória RAM</label>
+                            <label>RAM</label>
                             <div class="range-slider">
                                 <!-- <input type="text" value="" /> -->
                                 <!-- <input type="text" id="example_id" name="example_name" value="" /> -->
@@ -93,12 +92,12 @@
                     <!-- OS -->
                     <div class="row">
                         <div class="col-md-12">
-                            <label class="mb_l">Sistema Operacional</label>
+                            <label class="mb_l">Operating System</label>
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/debian.png">
+                                            <img src="/images/so/debian.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -108,7 +107,7 @@
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/debian.png">
+                                            <img src="/images/so/debian.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -118,7 +117,7 @@
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/microsoft.png">
+                                            <img src="/images/so/microsoft.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -128,7 +127,7 @@
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/centos.png">
+                                            <img src="/images/so/centos.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -140,7 +139,7 @@
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/vyatta.png">
+                                            <img src="/images/so/vyatta.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -150,7 +149,7 @@
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/ubuntu.png">
+                                            <img src="/images/so/ubuntu.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -160,7 +159,7 @@
                                 <div class="col-md-3">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/cloudlinux.png">
+                                            <img src="/images/so/cloudlinux.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -170,7 +169,7 @@
                                 <div class="col-md-4 hidden">
                                     <div class="box_SO">
                                         <div class="box_img">
-                                            <img src="/images/SO/other_options.png">
+                                            <img src="/images/so/other_options.png">
                                         </div>
                                     </div>
                                     <select class="form-control">
@@ -184,7 +183,7 @@
                     <!-- Disk -->
                     <div class="row">
                         <div class="col-md-12">
-                            <label>Disco</label>
+                            <label>Disk</label>
                             <div class="switching">
                                 <div class="switch switch-blue">
                                     <input type="radio" class="switch-input" name="disk" value="local" id="local" checked>
@@ -217,11 +216,11 @@
                     <hr>
                     <!-- Network options -->
                     <div class="row">
-                        <h3>Opções de Rede</h3>
+                        <h3>Network Options</h3>
                         <div class="col-md-4">
-                            <label>Velocidade do Link</label>
+                            <label>Link Speed</label>
                             <select class="form-control">
-                                <option value="">Escolha a velocidade do Link</option>
+                                <option value="">1 Gbps Private Network Uplink</option>
                             </select>
                         </div>
                     </div>
@@ -230,7 +229,7 @@
                     <div class="row mt_l">
                         <div class="col-md-12">
                             <div id="submit_form">
-                                <input type="submit" name="commit" value="Revisar Compra" class="btn btn-primary pull-right">
+                                <input type="submit" name="commit" value="Review Purchase" class="btn btn-primary pull-right">
                             </div>
                         </div>
                     </div>
@@ -238,13 +237,13 @@
                 <!-- Value Summary -->
                 <div class="col-md-3">
                     <div class="value_div">
-                        <h3>Valor</h3>
+                        <h3>Value</h3>
                         <div class="switching">
                             <div class="switch switch-blue">
                                 <input type="radio" class="switch-input" name="view2" value="week2" id="week2" checked>
-                                <label for="week2" class="switch-label switch-label-off">Hora</label>
+                                <label for="week2" class="switch-label switch-label-off">Hourly</label>
                                 <input type="radio" class="switch-input" name="view2" value="month2" id="month2">
-                                <label for="month2" class="switch-label switch-label-on">Mês</label>
+                                <label for="month2" class="switch-label switch-label-on">Monthly</label>
                                 <span class="switch-selection"></span>
                             </div>
                         </div>
@@ -300,7 +299,7 @@
                                 </tr>
                                 <tr class="div_recalculate hidden">
                                     <td class="text-center" colspan="2">
-                                        Calculando...
+                                        Calculating...
                                     </td>
                                 </tr>
                             </tbody>
