--- a/src/html/pages/shop/plans.html
+++ b/src/html/pages/shop/plans.html
@@ -5,19 +5,19 @@
 <div id="page-menu">
   <div class="container clearfix">
     <div class="menu_page_title">
-      Produtos
+      Products
       <span>Zertico</span>
     </div>
     <nav>
       <ul>
         <li>
-          <a href="http://foo.localhost:3004/br/shop/servers">Servers</a>
+          <a href="#">Servers</a>
         </li>
         <li>
-          <a href="http://foo.localhost:3004/br/shop/emails">E-mails</a>
+          <a href="#">E-mails</a>
         </li>
         <li>
-          <a href="http://foo.localhost:3004/br/shop/office-365">Office 365</a>
+          <a href="#">Office 365</a>
         </li>
       </ul>
     </nav>
@@ -29,16 +29,16 @@
 
 <section class="page_title">
   <div class="container clearfix">
-    <h2>Servidores</h2>
-    <span>Servidores perfeitos para a sua necessidade, performance e confiabilidade!</span>
+    <h2>Servers</h2>
+    <span>The Ideal Servers for your necessity, performance and reliability!</span>
     <ol class="breadcrumb">
       <li>
-        <a>Página Inicial</a>
+        <a>Home</a>
       </li>
       <li>
-        <a>Loja</a>
+        <a href="categories.html">Store</a>
       </li>
-      <li class="active">Servidores</li>
+      <li class="active">Servers</li>
     </ol>
   </div>
 </section>
@@ -47,8 +47,8 @@
     <div class="container clearfix">
       <div class="title_border_bottom">
         <h3>
-          Mais
-          <span>planos a sua escolha</span>
+          More
+          <span>plans on your choice</span>
         </h3>
       </div>
       <div class="col-sm-6 col-md-4">
@@ -59,7 +59,6 @@
           <div class="box_desc">
             <h3>
               Small
-              <!-- %span.subtitle= @model.description -->
             </h3>
             <p>
               Processor
@@ -88,7 +87,7 @@
               <br>
               R$ 224,93
             </p>
-            <a href="/br/shop/cart/add/1" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -100,7 +99,6 @@
           <div class="box_desc">
             <h3>
               Medium
-              <!-- %span.subtitle= @model.description -->
             </h3>
             <p>
               Processor
@@ -129,7 +127,7 @@
               <br>
               R$ 449,86
             </p>
-            <a href="/br/shop/cart/add/2" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -141,7 +139,6 @@
           <div class="box_desc">
             <h3>
               Large
-              <!-- %span.subtitle= @model.description -->
             </h3>
             <p>
               Processor
@@ -170,7 +167,7 @@
               <br>
               R$ 940,14
             </p>
-            <a href="/br/shop/cart/add/3" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
       </div>
@@ -182,7 +179,6 @@
           <div class="box_desc">
             <h3>
               Enterprise
-              <!-- %span.subtitle= @model.description -->
             </h3>
             <p>
               Processor
@@ -215,7 +211,7 @@
               <br>
               R$ 2.008,82
             </p>
-            <a href="/br/shop/cart/add/4" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
       </div>
@@ -227,7 +223,6 @@
           <div class="box_desc">
             <h3>
               Blog
-              <!-- %span.subtitle= @model.description -->
             </h3>
             <p>
               Processor
@@ -256,7 +251,7 @@
               <br>
               R$ 321,33
             </p>
-            <a href="/br/shop/cart/add/5" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
       </div>
@@ -268,7 +263,6 @@
           <div class="box_desc">
             <h3>
               Ecommerce
-              <!-- %span.subtitle= @model.description -->
             </h3>
             <p>
               Processor
@@ -297,7 +291,7 @@
               <br>
               R$ 874,01
             </p>
-            <a href="/br/shop/cart/add/6" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
       </div>
