--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -14,40 +14,41 @@
             <div class="col-lg-9">
                 <div class="big-footer-sep clearfix">
                     <div class="col-lg-3 big-footer-menu">
-                        <span>Produtos e Serviços</span>
+                        <span>Products and Services</span>
                         <ul>
-                            <li><i class="fa fa-angle-right"></i> Servidores Dedicados</li>
-                            <li><i class="fa fa-angle-right"></i> Servidores Virtuais</li>
+                            <li><i class="fa fa-angle-right"></i> Dedicated Servers </li>
+                            <li><i class="fa fa-angle-right"></i> Virtual Servers</li>
                             <li><i class="fa fa-angle-right"></i> Software</li>
-                            <li><i class="fa fa-angle-right"></i> Armazenamento</li>
+                            <li><i class="fa fa-angle-right"></i> Storage</li>
                             <li><i class="fa fa-angle-right"></i> CDN</li>
+                            <li><i class="fa fa-angle-right"></i> Backup</li>
                         </ul>
                     </div>
                     <div class="col-lg-3 big-footer-menu">
-                        <span>Soluções</span>
+                        <span>Solutions</span>
                         <ul>
-                            <li><i class="fa fa-angle-right"></i> Marketing Digital</li>
+                            <li><i class="fa fa-angle-right"></i> Digital Marketing</li>
                             <li><i class="fa fa-angle-right"></i> E-commerce</li>
-                            <li><i class="fa fa-angle-right"></i> Cloud privada</li>
-                            <li><i class="fa fa-angle-right"></i> Soluções de Hospedagem</li>
+                            <li><i class="fa fa-angle-right"></i> Provate Cloud</li>
+                            <li><i class="fa fa-angle-right"></i> Hosting Solutions</li>
                         </ul>
                     </div>
                     <div class="col-lg-3 big-footer-menu">
-                        <span>Programa</span>
+                        <span>Program</span>
                         <ul>
-                            <li><i class="fa fa-angle-right"></i> Programa de Fidelidade</li>
-                            <li><i class="fa fa-angle-right"></i> Programa de Revendas</li>
+                            <li><i class="fa fa-angle-right"></i> Affiliate Program</li>
+                            <li><i class="fa fa-angle-right"></i> Reseller Program</li>
                             <li><i class="fa fa-angle-right"></i> Marketplace</li>
                         </ul>
                     </div>
                     <div class="col-lg-3 big-footer-menu">
-                        <span>Sobre nós</span>
+                        <span>About Us</span>
                         <ul>
                             <li><i class="fa fa-angle-right"></i> A Foo Inc</li>
-                            <li><i class="fa fa-angle-right"></i> Parceria Softlayer</li>
-                            <li><i class="fa fa-angle-right"></i> Equipe</li>
-                            <li><i class="fa fa-angle-right"></i> Trabalhe conosco</li>
-                            <li><i class="fa fa-angle-right"></i> Contato</li>
+                            <li><i class="fa fa-angle-right"></i> Softlayer Partnership</li>
+                            <li><i class="fa fa-angle-right"></i> Team</li>
+                            <li><i class="fa fa-angle-right"></i> Work with us</li>
+                            <li><i class="fa fa-angle-right"></i> Contact</li>
                         </ul>
                     </div>
                 </div>
