--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -6,19 +6,19 @@
             </a>
             <ul class="list-inline navbar-right main-nav">
                 <li class="dropdown">
-                    <a href="#">Produtos e serviços</a>
+                    <a href="#">Products and Services</a>
                     <ul style="display: none;">
                         <li>
-                            <a href="#">Servidores Dedicados</a>
+                            <a href="#">Dedicated Servers</a>
                         </li>
                         <li>
-                            <a href="#">Servidores Virtuais</a>
+                            <a href="#">Virtual Servers</a>
                         </li>
                         <li>
                             <a href="#">Software</a>
                         </li>
                         <li>
-                            <a href="#">Armazenamento</a>
+                            <a href="#">Storage</a>
                         </li>
                         <li>
                             <a href="#">CDN</a>
@@ -29,16 +29,16 @@
                     </ul>
                 </li>
                 <li class="sub-menu">
-                    <a href="#" class="sf-with-ul">Soluções</a>
+                    <a href="#" class="sf-with-ul">Solutions</a>
                 </li>
                 <li class="sub-menu">
-                    <a href="#" class="sf-with-ul">Programa</a>
+                    <a href="#" class="sf-with-ul">Program</a>
                 </li>
                 <li>
                     <a href="#">Blog</a>
                 </li>
                 <li>
-                    <a href="#">Sobre Nós</a>
+                    <a href="#">About Us</a>
                 </li>
                 <li>
                     <a class="login" href="/br/login" class="button-logins">Login</a>
