--- a/src/html/pages/distributor/edit-profile.html
+++ b/src/html/pages/distributor/edit-profile.html
@@ -9,7 +9,7 @@
                 <a href='/'>Home</a>
             </li>
             <li>
-                <a>Accounts</a>
+                <a>Admin</a>
             </li>
             <li class='active'>
                 <strong>My Account</strong>
@@ -23,7 +23,7 @@
     <div class='row'>
         <div class='col-lg-12'>
             <h4>Edit profile</h4>
-            <form novalidate="novalidate" class="simple_form form-horizontal" id="" action="" method="post">
+            <form class="simple_form form-horizontal">
                 <div class="col-md-12">
                     <h5>Personal Information</h5>
                     <div class="form-group">
@@ -77,7 +77,7 @@
                             <input class="form-control" type="text" placeholder="Zipcode" />
                         </div>
                         <div class="col-md-4">
-                            <select id="organization_country" name="organization[country]" class="form-control">
+                            <select class="form-control">
                                 <option>Country</option>
                                 <option value="BR">Brasil</option>
                                 <option value="CH">Chile</option>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class='col-md-4 col-md-offset-7 text-right'>
-                    <input type="submit" name="commit" value="Save" class="btn btn-default btn-inverse" />
+                    <input type="submit" value="Save" class="btn btn-default" />
                 </div>
             </form>
         </div>
