--- a/src/html/pages/reseller/companies.html
+++ b/src/html/pages/reseller/companies.html
@@ -22,7 +22,7 @@
         <div class="col-lg-12 s-element">
             <br>
             <div class="pull-right">
-                <button class="btn btn-default btn-inverse">New Company</button>
+                <button class="btn btn-default">New Company</button>
             </div>
             <br>
             <br>
