--- a/src/html/pages/reseller/new-category.html
+++ b/src/html/pages/reseller/new-category.html
@@ -25,13 +25,13 @@
       </div>
       <br>
       <br>
-      <form novalidate="novalidate" class="simple_form form-horizontal">
+      <form class="form-horizontal">
         <div class="form-group string required">
           <label class="col-sm-3 string required control-label">
             <abbr title="Requerido">*</abbr> Name
           </label>
           <div class="col-sm-8">
-            <input type="text" id="name" class="string required form-control">
+            <input type="text" class="string required form-control">
           </div>
         </div>
         <div class="col-md-4 col-md-offset-7 text-right">
