--- a/src/html/pages/reseller/new-group.html
+++ b/src/html/pages/reseller/new-group.html
@@ -1,16 +1,16 @@
 {% extends 'layouts/admin.html' %} {% block content %}
 <div class='row wrapper'>
     <div class='col-lg-10'>
-        <h3>Listing Categories</h3>
+        <h3>Listing Groups</h3>
         <ol class='breadcrumb'>
             <li>
                 <a href='/'>Home</a>
             </li>
             <li>
-                <a>Categories</a>
+                <a>Groups</a>
             </li>
             <li class='active'>
-                <strong>Listing Categories</strong>
+                <strong>Listing Groups</strong>
             </li>
         </ol>
     </div>
@@ -21,17 +21,17 @@
   <div class="row">
     <div class="col-lg-7">
       <div class="">
-        <h4>New Category</h4>
+        <h4>New Group</h4>
       </div>
       <br>
       <br>
-      <form novalidate="novalidate" class="simple_form form-horizontal">
+      <form class="form-horizontal">
         <div class="form-group string required">
           <label class="col-sm-3 string required control-label">
             <abbr title="Requerido">*</abbr> Name
           </label>
           <div class="col-sm-8">
-            <input type="text" id="name" class="string required form-control">
+            <input type="text" class="string required form-control">
           </div>
         </div>
         <div class="col-md-4 col-md-offset-7 text-right">
