--- a/src/html/pages/reseller/show-group.html
+++ b/src/html/pages/reseller/show-group.html
@@ -4,12 +4,34 @@
     <div class='col-lg-4 go-back'>
         <i class="fa fa-angle-left"></i>
     </div>
-    <div class='col-lg-5 title'>
+    <div class='col-lg-3 title'>
         <span>Servers</span>
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-5">
         <a class="btn btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Group</a>
         <a class="btn btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+    </div>
+</div>
+<div class='row wrapper backs-nav'>
+    <div class='col-lg-7 col-lg-offset-2 comp-nav'>
+        <div class="comp-nav-item">
+            <a href="#">
+                <i class="fa fa-info"></i>
+                <span>Information</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>Groups</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-plus"></i>
+                <span>New Group</span>
+            </a>
+        </div>
     </div>
 </div>
 <!-- CONTENT -->
@@ -19,7 +41,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Name</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>Give a name to this group. (Ex: Servers) <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="col-lg-8">
@@ -33,7 +55,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Plans</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>From here you can create the plans you want to include on this group <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <button class="pull-right btn btn-primary">Edit Plans</button>
@@ -42,7 +64,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Slug</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>Slug is a "friendly" name that will appear on the url when a client open the page. (Ex: www.mywebsite.com/my_slug) <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="col-lg-8">
@@ -56,7 +78,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Description</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>A brief description of what this group is all about. <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="col-lg-8">
@@ -70,7 +92,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Icon</h4>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
+                    <small>Choose an icon that best fits with this group. (We use font-awesome icons, so you have lots of them to choose) <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="clearfix">
@@ -86,7 +108,7 @@
                     </div>
                     <hr>
                     <div class="form-group">
-                        <form class="simple_form form-horizontal form-group string required">
+                        <form class="form-horizontal form-group string required">
                             <label class="col-sm-3 string required control-label">
                                 New icon: 
                             </label>
@@ -107,11 +129,13 @@
             <div class="comp-s-item clearfix">
                 <div class='col-lg-4'>
                     <h4>Enable Group</h4>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
+                    <small>You can enable and disable it at any time. <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
-                    <input type="checkbox" />
-                    <strong class="ml_10">Enabled</strong>
+                    <label>
+                        <input type="checkbox" />
+                        <span class="ml_10">Enabled</span>
+                    </label>
                 </div>
             </div>
         </div>
