--- a/src/html/pages/reseller/show-plan.html
+++ b/src/html/pages/reseller/show-plan.html
@@ -20,7 +20,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Basic information</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>Choose a name for this plan, enable/disable it, and choose how it will be charged (you can check the option hourly, if you don't, it will be assumed you want to charge it monthly. <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="col-lg-8 mb_20">
@@ -30,12 +30,16 @@
                         <button class="pull-right btn btn-default">Edit name</button>
                     </div>
                     <div class="col-lg-12 mb_20">
+                        <label>
                         <input type="checkbox"></input>
-                        <strong class="ml_10">Enabled</strong>
+                        <strong class="ml_10">Enabled</strong>       
+                        </label>
                     </div>
                     <div class="col-lg-12">
+                        <label>
                         <input type="checkbox" />
-                        <strong class="ml_10">Hourly</strong>
+                        <strong class="ml_10">Hourly</strong>       
+                        </label>
                     </div>
                 </div>
             </div>
@@ -43,7 +47,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>General details</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>All general details that this plan will include. <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="form-group">
@@ -110,7 +114,7 @@
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
                     <h4>Disk San</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>Choose the san disks. <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="form-group">
@@ -176,7 +180,7 @@
             <div class="comp-s-item clearfix">
                 <div class='col-lg-4'>
                     <h4>Disk Local</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                    <small>Choose the local disks. <a href="../docs/documentation.html">Learn more about it</a></small>
                 </div>
                 <div class="col-lg-8">
                     <div class="form-group">
