--- a/src/html/pages/shop/cart-login.html
+++ b/src/html/pages/shop/cart-login.html
@@ -1,68 +1,70 @@
 {% extends 'layouts/shop.html' %} {% block content %}
 <section class="page_title page_title_mini">
     <div class="container clearfix">
-        <h2>Servidores Dedicados</h2>
+        <h2>Sign In</h2>
         <ol class="breadcrumb">
             <li>
-                <a href="#">Página Inicial</a>
+                <a href="#">Home</a>
             </li>
             <li>
-                <a href="#">Produtos e Serviços</a>
+                <a href="cart.html">Shopping Cart</a>
             </li>
-            <li class="active">Carrinho de Compras</li>
+            <li class="active">
+                Sign In
+            </li>
         </ol>
     </div>
 </section>
 <section id="page_content">
     <div class="wrap_content">
-        <div class="container">
-            <ul class="menu_steps">
+        <div class="container clearfix">
+            <ul class="menu_steps clearfix">
                 <li>
                     <a class="step_icon fa fa-database" href="#"></a>
-                    <h5>Configurar Produto</h5>
-                </li>
-                <li class="active">
-                    <a class="step_icon fa fa-shopping-cart" href="#"></a>
-                    <h5>Revisar Compra</h5>
+                    <h5>Configure Product</h5>
                 </li>
                 <li>
+                    <a class="step_icon fa fa-shopping-cart" href="#"></a>
+                    <h5>Review Purchase</h5>
+                </li>
+                <li class="active">
                     <a class="step_icon fa fa-user" href="#"></a>
-                    <h5>Identificação</h5>
+                    <h5>Identification</h5>
                 </li>
                 <li>
                     <a class="step_icon fa fa-money" href="#"></a>
-                    <h5>Efetuar Pagamento</h5>
+                    <h5>Payment</h5>
                 </li>
                 <li>
                     <a class="step_icon fa fa-check" href="#"></a>
-                    <h5>Produto Liberado</h5>
+                    <h5>Product Released</h5>
                 </li>
             </ul>
         </div>
         <div class="container mt_40">
             <div id="form_login" class="col-md-4">
                 <div class="well well-lg">
-                    <form id="new_user" class="">
-                        <h4>Logar na sua Conta</h4>
+                    <form id="new_user">
+                        <h4>Log in your account</h4>
                         <br>
                         <div class="col-md-12">
                             <label for="user_email">Email:</label>
-                            <input type="email" id="user_email" class="form-control">
+                            <input type="email" class="form-control">
                         </div>
                         <div class="col-md-12 mt_20">
-                            <label>Senha:</label>
-                            <input type="password" id="user_password" class="form-control">
+                            <label>Password;:</label>
+                            <input type="password" class="form-control">
                         </div>
                         <div class="col-md-12 mb_0 mt_20">
                             <input type="submit" class="btn btn-primary no_margin" value="Sign In">
-                            <a href="" class="pull-right">Forgot password?</a>
+                            <a href="#" class="pull-right">Forgot password?</a>
                             <br>
                         </div>
                     </form>
                 </div>
             </div>
             <div id="form_register" class="col-md-6 ml_40">
-                <h4>Não tem uma conta? Registre-se agora.</h4>
+                <h4>Don't you have an account? Sign Up.</h4>
                 <br>
                 <form class="mb_0">
                     <div class="col-md-12">
@@ -71,11 +73,11 @@
                     </div>
 
                     <div class="col-md-6">
-                        <label>Senha</label>
+                        <label>Password</label>
                         <input type="password" id="user_password" class="form-control">
                     </div>
                     <div class="col-md-6">
-                        <label>Confirme sua senha</label>
+                        <label>Password Confirmation</label>
                         <input type="password" id="user_password_confirmation" class="form-control">
                     </div>
                     
