--- a/src/html/pages/shop/cart-register.html
+++ b/src/html/pages/shop/cart-register.html
@@ -3,44 +3,46 @@
 {% block content %}
 
 <section class="page_title page_title_mini">
-  <div class="container clearfix">
-    <h2>Servidores Dedicados</h2>
-    <ol class="breadcrumb">
-      <li>
-        <a href="#">Página Inicial</a>
-      </li>
-      <li>
-        <a href="#">Produtos e Serviços</a>
-      </li>
-      <li class="active">Servidores Dedicados</li>
-    </ol>
-  </div>
+    <div class="container clearfix">
+        <h2>Sign Up</h2>
+        <ol class="breadcrumb">
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="cart.html">Shopping Cart</a>
+            </li>
+            <li class="active">
+                Sign Up
+            </li>
+        </ol>
+    </div>
 </section>
 <section id="page_content">
   <div class="wrap_content">
     <div class="container clearfix">
-      <ul class="menu_steps clearfix">
-        <li>
-          <a class="step_icon fa fa-database" href="#"></a>
-          <h5>Configurar Produto</h5>
-        </li>
-        <li>
-          <a class="step_icon fa fa-shopping-cart" href="#"></a>
-          <h5>Revisar Compra</h5>
-        </li>
-        <li class="active">
-          <a class="step_icon fa fa-user" href="#"></a>
-          <h5>Identificação</h5>
-        </li>
-        <li>
-          <a class="step_icon fa fa-money" href="#"></a>
-          <h5>Efetuar Pagamento</h5>
-        </li>
-        <li>
-          <a class="step_icon fa fa-check" href="#"></a>
-          <h5>Produto Liberado</h5>
-        </li>
-      </ul>
+        <ul class="menu_steps clearfix">
+            <li>
+                <a class="step_icon fa fa-database" href="#"></a>
+                <h5>Configure Product</h5>
+            </li>
+            <li>
+                <a class="step_icon fa fa-shopping-cart" href="#"></a>
+                <h5>Review Purchase</h5>
+            </li>
+            <li class="active">
+                <a class="step_icon fa fa-user" href="#"></a>
+                <h5>Identification</h5>
+            </li>
+            <li>
+                <a class="step_icon fa fa-money" href="#"></a>
+                <h5>Payment</h5>
+            </li>
+            <li>
+                <a class="step_icon fa fa-check" href="#"></a>
+                <h5>Product Released</h5>
+            </li>
+        </ul>
     </div>
   <div class="container clearfix">
       <form id="new_organization">
@@ -48,30 +50,30 @@
             <div class="container">
               <div class="col-md-3 col-md-offset-4">
                 <label class="radio">
-                  <input type="radio" value="cpf" name="group_org" class="custom-radio">
-                  <span style="padding-left: 5px;">Pessoa Física</span>
+                  <input type="radio" value="person" name="group_org" class="custom-radio">
+                  <span style="padding-left: 5px;">Person</span>
                 </label>
               </div>
               <div class="col-md-3">
                 <label class="radio">
-                  <input type="radio" value="cnpj" name="group_org" class="custom-radio"
+                  <input type="radio" value="corporation" name="group_org" class="custom-radio" checked="checked"
                   >
-                  <span style="padding-left: 5px;">Pessoa Jurídica</span>
+                  <span style="padding-left: 5px;">Corporation</span>
                 </label>
               </div>
                 <div class="col-md-12">
                     <h5>Personal Information</h5>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <label class="control-label">Razao Social</label>
+                            <label class="control-label">Corporate name</label>
                             <input class="form-control" type="text" placeholder="Foo Inc." />
                         </div>
                         <div class="col-md-8">
-                            <label class="control-label">Nome Fantasia</label>
+                            <label class="control-label">Trade name</label>
                             <input class="form-control" type="text" placeholder="Foo Inc." />
                         </div>
                         <div class="col-md-4">
-                            <label class="control-label">CNPJ</label>
+                            <label class="control-label">Document</label>
                             <input class="form-control" type="text" placeholder="xx.xxx.xxx/xxxx-xx" />
                         </div>
                     </div>
@@ -108,9 +110,9 @@
                             <input class="form-control" type="text" placeholder="Zipcode" />
                         </div>
                         <div class="col-md-4">
-                            <select id="organization_country" name="organization[country]" class="form-control">
+                            <select class="form-control">
                                 <option>Country</option>
-                                <option value="BR">Brasil</option>
+                                <option value="BR">Brazil</option>
                                 <option value="CH">Chile</option>
                             </select>
                         </div>
@@ -121,7 +123,7 @@
                 </div>
             <div class="col-md-12 mt_20">
             <div class="col-md-3">
-              <input type="submit" class="btn btn btn-primary" value="Criar Organization" name="commit">
+              <input type="submit" class="btn btn btn-primary" value="Create Organization">
             </div>
             </div>
           </div>
