--- a/src/html/pages/shop/categories.html
+++ b/src/html/pages/shop/categories.html
@@ -2,18 +2,18 @@
 <div id="page-menu">
     <div class="container clearfix">
         <div class="menu_page_title">
-            Produtos <span>Zertico</span>
+            Products <span>Zertico</span>
         </div>
         <nav class="mini-nav">
             <ul>
                 <li>
-                    <a href="http://foo.localhost:3004/br/shop/servers">Servers</a>
+                    <a href="#">Servers</a>
                 </li>
                 <li>
-                    <a href="http://foo.localhost:3004/br/shop/emails">E-mails</a>
+                    <a href="#">E-mails</a>
                 </li>
                 <li>
-                    <a href="http://foo.localhost:3004/br/shop/office-365">Office 365</a>
+                    <a href="#">Office 365</a>
                 </li>
             </ul>
         </nav>
@@ -24,18 +24,18 @@
 </div>
 <section class="page_title">
     <div class="container clearfix">
-        <h2>Loja</h2>
-        <span>As melhores soluções de Cloud do mercado.</span>
+        <h2>Store</h2>
+        <span>The best solutions on the Cloud Computing market.</span>
         <ol class="breadcrumb">
             <li>
-                <a>Página Inicial</a>
+                <a>Home</a>
             </li>
-            <li class="active">Loja</li>
+            <li class="active">Store</li>
         </ol>
     </div>
 </section>
 <section id="page_content">
-    <div class="wrap_content pb_n">
+    <div class="wrap_content pb_0">
         <div class="container clearfix">
             <div class="col-sm-6 col-md-4">
                 <div class="box_category">
@@ -47,7 +47,7 @@
                           Servers
                         </h3>
                         <span>High Performance Server in a Class A Datacenter</span>
-                        <a href="#" class="btn btn-primary">Veja as Opções</a>
+                        <a href="shop-groups.html" class="btn btn-primary">More options</a>
                     </div>
                 </div>
             </div>
@@ -60,8 +60,8 @@
                         <h3>
                           E-mails
                         </h3>
-                        <span>Contas de e-mails, a forma mais prática e segura de comunicação.</span>
-                        <a href="#" class="btn btn-primary">Veja as Opções</a>
+                        <span>Email accounts, the most practice and safe means of communication.</span>
+                        <a href="#" class="btn btn-primary">More options</a>
                     </div>
                 </div>
             </div>
@@ -74,8 +74,8 @@
                         <h3>
                           Office 365
                         </h3>
-                        <span>Toda sua empresa trabalhando em documentos ao mesmo tempo, em qualquer lugar.</span>
-                        <a href="#" class="btn btn-primary">Veja as Opções</a>
+                        <span>All your company working on documents at the same time, at any time.</span>
+                        <a href="#" class="btn btn-primary">More options</a>
                     </div>
                 </div>
             </div>
@@ -84,8 +84,8 @@
         <div class="promo_box">
             <div class="container">
                 <div class="col-lg-10">
-                    <h3>Podemos lhe ajudar?</h3>
-                    <span>Ficaremos felizes em lhe auxiliar caso tenha alguma dúvida, entre e fale conosco</span>
+                    <h3>Can we help you?</h3>
+                    <span>We will be glad to assist you in case you have any questions, click and contact us</span>
                 </div>
                 <div class="col-lg-2">
                     <a class="promo_button">Contato</a>
