--- a/src/html/pages/shop/groups.html
+++ b/src/html/pages/shop/groups.html
@@ -5,19 +5,19 @@
 <div id="page-menu">
         <div class="container clearfix">
           <div class="menu_page_title">
-            Produtos
+            Products
             <span>Foo Inc</span>
           </div>
           <nav>
             <ul>
               <li>
-                <a href="http://foo.localhost:3004/br/shop/servers">Servers</a>
+                <a href="#">Servers</a>
               </li>
               <li>
-                <a href="http://foo.localhost:3004/br/shop/emails">E-mails</a>
+                <a href="#">E-mails</a>
               </li>
               <li>
-                <a href="http://foo.localhost:3004/br/shop/office-365">Office 365</a>
+                <a href="#">Office 365</a>
               </li>
             </ul>
           </nav>
@@ -29,24 +29,24 @@
 
 <section class="page_title">
       <div class="container clearfix">
-        <h2>Loja</h2>
-        <span>As melhores soluções de Cloud do mercado.</span>
+        <h2>Store</h2>
+        <span>The best solutions on the Cloud Computing market.</span>
         <ol class="breadcrumb">
           <li>
-            <a>Página Inicial</a>
+            <a>Home</a>
           </li>
-          <li class="active">Loja</li>
+          <li class="active">Store</li>
         </ol>
       </div>
     </section>
 
 <section id="page_content">
-        <div class="wrap_content pb_n">
+        <div class="wrap_content pb_0">
           <div class="container clearfix">
             <div class="col-sm-6 col-md-4">
               <div class="box_group">
                 <div class="box_icon_group">
-                  <a href="/br/shop/servers/cloud-servers"><i class="fa fa-cloud"></i>
+                  <a href="plans.html"><i class="fa fa-cloud"></i>
                   </a>
                 </div>
                 <h3>Cloud Servers</h3>
@@ -56,7 +56,7 @@
             <div class="col-sm-6 col-md-4">
               <div class="box_group">
                 <div class="box_icon_group">
-                  <a href="/br/shop/servers/bare-metal"><i class="fa fa-cloud"></i>
+                  <a href="plans.html"><i class="fa fa-cloud"></i>
                   </a>
                 </div>
                 <h3>Bare Metal</h3>
@@ -68,9 +68,9 @@
           <div class="promo_box">
             <div class="container clearfix">
               <h3>
-                Podemos lhe auxiliar?
+                Can we help you?
               </h3>
-              <span>Ficaremos felizes em lhe auxiliar caso tenha alguma dúvida, entre e fale conosco</span>
+              <span>We will be glad to assist you in case you have any questions, click and contact us</span>
               <a class="promo_button">Contato</a>
             </div>
           </div>
