--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -1,62 +1,110 @@
 <ul class='nav' id='side-menu'>
-	<li class='nav-header'>
-	    Logo
-	</li>
-	<li>
-	    <a href='#'>
-	        <i class='fa fa-th-large'></i>
-	        <span class='nav-label'>Home</span>
-	    </a>
-	</li>
-	<li>
-	    <a href='#'>
-	        <i class='fa fa-group'></i>
-	        <span class='nav-label'>Clients</span>
-	    </a>
-	</li>
-	<li class='active'>
-	    <a href='#'>
-	        <i class='fa fa-building'></i>
-	        <span class='nav-label'>Providers</span>
-	        <i class='fa fa fa-angle-left'></i>
-	    </a>
-	    <ul class='nav nav-second-level collapse in'>
-	        <li>
-	            <a href='#'>Flot Charts</a>
-	        </li>
-	        <li class='active'>
-	            <a href='#'>Morris.js Charts</a>
-	        </li>
-	    </ul>
-	</li>
-	<li>
+  <li class='nav-header'>
+      Logo
+  </li>
+  <li>
     <a href='#'>
-      <i class='fa fa-cube'></i>
-      <span class='nav-label'>Products</span>
+      <i class='fa fa-user'></i>
+      <span class='nav-label'>Distributor</span>
       <i class='fa fa fa-angle-left'></i>
     </a>
     <ul class='nav nav-second-level collapse'>
       <li>
-        <a href='#'>Categories</a>
+        <a href='../distributor/edit-profile.html'>Edit Profile</a>
       </li>
       <li>
-        <a href='#'>Listing</a>
+        <a href='../distributor/new-company.html'>New Company</a>
       </li>
     </ul>
-	</li>
-	<li>
+  </li>
+  <li>
     <a href='#'>
-      <i class='fa fa-money'></i>
-      <span class='nav-label'>Financial</span>
+      <i class='fa fa-user'></i>
+      <span class='nav-label'>Reseller</span>
       <i class='fa fa fa-angle-left'></i>
     </a>
     <ul class='nav nav-second-level collapse'>
       <li>
-         <a href='#'>Invoices</a>
+        <a href='../reseller/companies.html'>Listing Companies</a>
       </li>
       <li>
-         <a href='#'>Pricing</a>
+        <a href='../reseller/new-client.html'>New Client</a>
+      </li>
+      <li>
+        <a href='../reseller/settings.html'>Settings</a>
+      </li>
+      <li>
+        <a href='../reseller/categories.html'>Listing Categories</a>
+      </li>
+      <li>
+        <a href='../reseller/new-category.html'>New Category</a>
+      </li>
+      <li>
+        <a href='../reseller/show-category.html'>Show Category</a>
+      </li>
+      <li>
+        <a href='../reseller/groups.html'>Listing Groups</a>
+      </li>
+      <li>
+        <a href='../reseller/new-group.html'>New Group</a>
+      </li>
+      <li>
+        <a href='../reseller/show-group.html'>Show Group</a>
+      </li>
+      <li>
+        <a href='../reseller/plans.html'>Listing Plans</a>
+      </li>
+      <li>
+        <a href='../reseller/new-plan.html'>New Plan</a>
+      </li>
+      <li>
+        <a href='../reseller/show-plan.html'>Show Plan</a>
+      </li>
+      <li>
+        <a href='../reseller/login.html'>Login</a>
       </li>
     </ul>
+  </li>
+  <li>
+      <a href='#'>
+          <i class='fa fa-shopping-cart'></i>
+          <span class='nav-label'>Store</span>
+          <i class='fa fa fa-angle-left'></i>
+      </a>
+      <ul class='nav nav-second-level collapse'>
+          <li>
+              <a href='../shop/categories.html'>Categories</a>
+          </li>
+          <li>
+              <a href='../shop/groups.html'>Groups</a>
+          </li>
+          <li>
+              <a href='../shop/plans.html'>Plans</a>
+          </li>
+          <li>
+              <a href='../shop/plans-customize.html'>Customize Plans</a>
+          </li>
+          <li>
+              <a href='../shop/cart.html'>Cart</a>
+          </li>
+          <li>
+              <a href='../shop/cart-login.html'>Login/Register</a>
+          </li>
+          <li>
+              <a href='../shop/cart-register.html'>Register</a>
+          </li>
+          <li>
+              <a href='../shop/cart-payment.html'>Payment</a>
+          </li>
+          <li>
+              <a href='../shop/cart-released.html'>Released</a>
+          </li>
+      </ul>
+  </li>
+  <li>
+    <a href='../docs/documentation/.html'>
+		<i class='fa fa-book'></i>
+		<span class='nav-label'>Docs</span>
+    </a>
 	</li>
 </ul>
